--- a/config.toml
+++ b/config.toml
@@ -314,7 +314,7 @@ enableGitInfo = false
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
  [[menu.main]]
     name = "CV"
-    url = "files/cvNov18.pdf"
+    url = "files/Vantaggiato_CV_May2019.pdf"
     weight = 6
 
 # Search.
