--- a/netlify.toml
+++ b/netlify.toml
@@ -1,26 +1,31 @@
 [build]
-  command = "hugo --gc --minify -b $URL"
+  #command = "hugo --gc --minify -b $URL"
+  #publish = "public"
   publish = "public"
+  command = "hugo"
 
-[build.environment]
-  HUGO_VERSION = "0.62.2"
-  HUGO_ENABLEGITINFO = "true"
+#[build.environment]
+ # HUGO_VERSION = "0.62.2"
+  #HUGO_ENABLEGITINFO = "true"
 
 [context.production.environment]
+  HUGO_VERSION = "0.62.2"
   HUGO_ENV = "production"
+  HUGO_ENABLEGITINFO = "true"
 
-[context.deploy-preview]
-  command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
+#[context.deploy-preview]
+ # command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
 
-[context.branch-deploy]
-  command = "hugo --gc --minify -b $DEPLOY_PRIME_URL"
+[context.branch-deploy.environment]
+  #command = "hugo --gc --minify -b $DEPLOY_PRIME_URL"
+  HUGO_VERSION = "0.62.2"
 
-[[headers]]
-  for = "*.webmanifest"
-  [headers.values]
-    Content-Type = "application/manifest+json; charset=UTF-8"
+#[[headers]]
+#  for = "*.webmanifest"
+#  [headers.values]
+#    Content-Type = "application/manifest+json; charset=UTF-8"
 
-[[headers]]
-  for = "index.xml"
-  [headers.values]
-    Content-Type = "application/rss+xml"
+#[[headers]]
+#  for = "index.xml"
+#  [headers.values]
+#    Content-Type = "application/rss+xml"
