--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -17,10 +17,17 @@
   url = "#featured"
   weight = 30
   
+  
+[[main]]
+  name = "Teaching"
+  url = "#teaching"
+  weight = 40
+  
+  
 [[main]]
   name = "Projects"
   url = "#projects"
-  weight = 40
+  weight = 50
 
 [[main]]
   name = "Contact"
