--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -82,18 +82,18 @@ edit_page = {repo_url = "https://github.com/gcushen/hugo-academic", content_dir 
 
 # Enter contact details (optional). To hide a field, clear it to "".
 email = "francesca.vantaggiato@kcl.ac.uk"
-phone = ""
+phone = "+44 (0)20 7848 9509"
 
 # Address
 # For country_code, use the 2-letter ISO code (see https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 )
-# address = {street = "450 Serra Mall", city = "Stanford", region = "CA", postcode = "94305", country = "United States", country_code = "US"}
+ address = {street = "40 Aldwych", city = "London", postcode = "WC2B 4BG", country = "United Kingdom", country_code = "UK"}
 
 # Geographic coordinates
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
 # coordinates = {latitude = "37.4275", longitude = "-122.1697"}
 
 # Directions for visitors to locate you.
-# directions = "Enter Building 1 and take the stairs to Office 200 on Floor 2"
+ directions = "Bush House North East"
 
 # Office hours
 # A list of your office hours. To remove, set to an empty list `[]`.
