--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -86,14 +86,17 @@ phone = "+44 (0)20 7848 9509"
 
 # Address
 # For country_code, use the 2-letter ISO code (see https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 )
- address = {street = "40 Aldwych", city = "London", postcode = "WC2B 4BG", country = "United Kingdom", country_code = "UK"}
+ address = {street = "Bush House North East \n 40 Aldwych", 
+ city = "London", 
+ postcode = "WC2B 4BG", 
+ country = "United Kingdom", country_code = "UK"}
 
 # Geographic coordinates
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
 # coordinates = {latitude = "37.4275", longitude = "-122.1697"}
 
 # Directions for visitors to locate you.
- directions = "Bush House North East"
+# directions = "Bush House North East"
 
 # Office hours
 # A list of your office hours. To remove, set to an empty list `[]`.
