--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -86,7 +86,7 @@ phone = "+44 (0)20 7848 9509"
 
 # Address
 # For country_code, use the 2-letter ISO code (see https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 )
- address = {street = "Bush House North East 40 Aldwych", city = "London", postcode = "WC2B 4BG", country = "United Kingdom", country_code = "UK"}
+ address = {street = "Bush House North East <br> 40 Aldwych", city = "London", postcode = "WC2B 4BG", country = "United Kingdom", country_code = "UK"}
 
 # Geographic coordinates
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
