--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -20,13 +20,13 @@
   
 [[main]]
   name = "Teaching"
-  url = "#teaching"
+  url = "teaching/"
   weight = 40
   
   
 [[main]]
   name = "Projects"
-  url = "#projects"
+  url = "projects/"
   weight = 50
 
 [[main]]
