--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 hugo[build]
   #command = "hugo --gc --minify -b $URL"
   #publish = "public"
-  publish = "content"
+  publish = "public"
   command = "hugo"
 
 #[build.environment]
@@ -9,7 +9,7 @@ hugo[build]
   #HUGO_ENABLEGITINFO = "true"
 
 [context.production.environment]
-  HUGO_VERSION = "0.111.3"
+  HUGO_VERSION = "v0.111.3"
   HUGO_ENV = "production"
   HUGO_ENABLEGITINFO = "true"
 
@@ -18,7 +18,7 @@ hugo[build]
 
 [context.branch-deploy.environment]
   #command = "hugo --gc --minify -b $DEPLOY_PRIME_URL"
-  HUGO_VERSION = "0.111.3"
+  HUGO_VERSION = "v0.111.3"
 
 #[[headers]]
 #  for = "*.webmanifest"
