--- a/netlify.toml
+++ b/netlify.toml
@@ -9,16 +9,16 @@ hugo[build]
   HUGO_ENABLEGITINFO = "true"
 
 [context.production.environment]
-  HUGO_VERSION = "v0.111.3"
+  HUGO_VERSION = "0.111.3"
   HUGO_ENV = "production"
   HUGO_ENABLEGITINFO = "true"
 
 #[context.deploy-preview]
-  command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
+ # command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
 
 [context.branch-deploy.environment]
-  command = "hugo --gc --minify -b $DEPLOY_PRIME_URL"
-  HUGO_VERSION = "v0.111.3"
+ # command = "hugo --gc --minify -b $DEPLOY_PRIME_URL"
+#  HUGO_VERSION = "v0.111.3"
 
 #[[headers]]
 #  for = "*.webmanifest"
