--- a/netlify.toml
+++ b/netlify.toml
@@ -16,9 +16,13 @@ hugo[build]
 #[context.deploy-preview]
  # command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
 
-#[context.branch-deploy.environment]
+[context.branch-deploy.environment]
  # command = "hugo --gc --minify -b $DEPLOY_PRIME_URL"
-#  HUGO_VERSION = "v0.111.3"
+  HUGO_VERSION = "0.111.3"
+  
+[context.deploy-preview.environment]
+  HUGO_VERSION = "0.111.3"
+
 
 #[[headers]]
 #  for = "*.webmanifest"
